base/traefik-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik-ingress-controller
  labels:
    app: traefik-ingress-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik-ingress-controller
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
      annotations:
        backup.velero.io/backup-volumes: traefik-persistent-storage
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:2.2
          volumeMounts:
            - name: traefik-config-static
              mountPath: /etc/traefik/
            - name: traefik-persistent-storage
              mountPath: /letsencrypt
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
      volumes:
        - name: traefik-persistent-storage
          persistentVolumeClaim:
            claimName: traefik-pv-claim
        - name: traefik-config-static
          configMap:
            name: traefik-config-static
