base/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    app: traefik-ingress
spec:
  selector:
    app: traefik-ingress
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app: traefik-ingress
spec:
  selector:
    app: traefik-ingress
  ports:
  - name: admin
    port: 8080
    protocol: TCP
