base/traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: kube-system
spec:
  entrypoints:
  - websecure
  routes:
  - match: Host(`traefik.anywhere.com`)
    kind: Rule
    services:
    - name: traefik-dashboard
      port: 8080
    middlewares:
    - name: traefik-dashboard-authentication
  tls:
    certResolver: letsencrypt
